<resources>
    <string name="app_name">TODO Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email2">Email:</string>
    <string name="id2">Id:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password_button">Sol·licitar canvi de contrasenya</string>
    <string name="add_task">Add Task</string>
    <string name="date_created">Date created:</string>
    <string name="task_text">Text:</string>
    <string name="date_limit">Date limit:</string>
    <string name="button_set">Set</string>
    <string name="time_limit">Time limit:</string>
    <string name="button_save">Save</string>
    <string name="text_home">Home</string>
    <string name="text_image">Image</string>
    <string name="text_tasks">Tasks</string>
    <string name="text_post">Posts</string>
    <string name="title_activity_nd">NDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash_screen">TODO</string>
    <string name="splash_content">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_settings">This are the settings</string>
    <string name="crear_post">Crear post</string>

    <string name="at_sign">\@</string>

    <string name="settings">Settings</string>
    <string name="search_bar">Search bar</string>
    <string name="search_bar_hint">Search profile…</string>
    <string name="profileButton">Go to profile</string>

    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="default_name">Name</string>
    <string name="default_username">\@username</string>
    <string name="average_global_rating">Average global rating</string>
    <string name="default_rating">5.0</string>
    <string name="default_amount_ratings">(0)</string>
    <string name="default_country">Country</string>
    <string name="location">Location</string>

    <string name="about_me">About me</string>
    <string name="default_about_me_description">(No description added)</string>
    <string name="my_services">My services</string>
    <string name="default_no_services">(No services offered)</string>
    <string name="service_title">Service title</string>
    <string name="service_description">Service description</string>
    <string name="service_rating">Service average rating</string>
    <string name="service_button">Go to service</string>

    <string name="back_to_feed_description">tornar al feed\n</string>
    <string name="title">Titol</string>
    <string name="description">Descripcio</string>
    <string name="price">Preu</string>
    <string name="select_images">Select IMG</string>
    <string name="Chats">Chats</string>

    <string-array name="payment_methods">
        <item>Visa</item>
        <item>Paypal</item>
        <item>Google Pay</item>
    </string-array>

</resources>
