<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homePostsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/crearPostFragment"
        android:enabled="true"
        android:icon="@drawable/agregar"
        android:title="@string/crear_post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/chatsFragment"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/mensajes"
        android:title="@string/chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/profile_logo"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
