<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/colorBackground">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SolveNet"
        android:id="@+id/title_text_view"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="#4E342E" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Has oblidat la teva contrasenya?"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:clickable="true"
        android:id="@+id/forgot_password"/>

</LinearLayout>
